welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:20: error: value T is not a member of object java.awt.Color
		setCouleurBrosse(Color.T(k));baisseBrosse();leveBrosse();avance()
                                       ^